--- a/index.html
+++ b/index.html
@@ -8,10 +8,28 @@
 <body>
     <h1>Chaitanya Swaroop Udata</h1>
     <h2>Vishakapatnam</h2>
-    <p>Visakhapatnam is a port city and <b>industrial center</b> in the Indian state of <b>Andhra Pradesh</b>, on the Bay of Bengal.
-        It's known for its many beaches, including <b>Ramakrishna Beach</b>, home to a preserved submarine at the <b>Kursura
-        Submarine Museum</b>. Nearby are the elaborate Kali Temple and the Visakha Museum, an old Dutch bungalow housing
-        local maritime and historical exhibits. </p>
+    <p>Visakhapatnam is a port city and <b>industrial center</b> in the Indian state of <b>Andhra Pradesh</b>, on the
+        Bay of Bengal.
+        It's known for its many beaches, including <b>Ramakrishna Beach</b>, home to a preserved submarine at the
+        <b>Kursura
+            Submarine Museum</b>. Nearby are the elaborate Kali Temple and the Visakha Museum, an old Dutch bungalow
+        housing
+        local maritime and historical exhibits.
+    </p>
 </body>
 
 </html>
+
+<hr>
+
+<h1>Travelling Directions</h1>
+<ol>
+    <li>Maryville to Kansas City</li>
+    <li>Kansas City to Chicago</li>
+    <li>Chicago to San Fransisco</li>
+    <li>San Fransisco to New Delhi</li>
+    <li>New Delhi to Hyderabad</li>
+    <li>Hyderabad to Vishakapatnam</li>
+</ol>
+
+<hr>
