--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <hr>
 
-<h1>Travelling Directions</h1>
+<h2>Travelling Directions</h2>
 <ol>
     <li>Maryville to Kansas City</li>
     <li>Kansas City to Chicago</li>
@@ -32,4 +32,14 @@
     <li>Hyderabad to Vishakapatnam</li>
 </ol>
 
+<h3>Items brought for maximum enjoyment</h3>
+<ul>
+    <li>Clothes</li>
+    <li>Electronic Items</li>
+    <li>Food Items</li>
+    <li>Money</li>
+</ul>
+
 <hr>
+ <a href="file:///C:/Users/s545622/Git_Demo/webapps-repos/webapps-f21-assignment-3-chaitanyaswaroopdev/aboutme.html">aboutme</a>
+ 
