--- a/index.html
+++ b/index.html
@@ -16,88 +16,86 @@
         housing
         local maritime and historical exhibits.
     </p>
-</body>
 
-</html>
+    <hr>
 
-<hr>
+    <h2>Travelling Directions</h2>
+    <ol>
+        <li>Maryville to Kansas City</li>
+        <li>Kansas City to Chicago</li>
+        <li>Chicago to San Fransisco</li>
+        <li>San Fransisco to New Delhi</li>
+        <li>New Delhi to Hyderabad</li>
+        <li>Hyderabad to Vishakapatnam</li>
+    </ol>
 
-<h2>Travelling Directions</h2>
-<ol>
-    <li>Maryville to Kansas City</li>
-    <li>Kansas City to Chicago</li>
-    <li>Chicago to San Fransisco</li>
-    <li>San Fransisco to New Delhi</li>
-    <li>New Delhi to Hyderabad</li>
-    <li>Hyderabad to Vishakapatnam</li>
-</ol>
+    <h3>Items brought for maximum enjoyment</h3>
+    <ul>
+        <li>Clothes</li>
+        <li>Electronic Items</li>
+        <li>Food Items</li>
+        <li>Money</li>
+    </ul>
 
-<h3>Items brought for maximum enjoyment</h3>
-<ul>
-    <li>Clothes</li>
-    <li>Electronic Items</li>
-    <li>Food Items</li>
-    <li>Money</li>
-</ul>
+    <a
+        href="file:///C:/Users/s545622/Git_Demo/webapps-repos/webapps-f21-assignment-3-chaitanyaswaroopdev/aboutme.html">aboutme</a>
 
-<a
-    href="file:///C:/Users/s545622/Git_Demo/webapps-repos/webapps-f21-assignment-3-chaitanyaswaroopdev/aboutme.html">aboutme</a>
+    <hr>
 
-<hr>
+    <style>
+        table,
+        th,
+        td {
+            border: 1px solid black;
+        }
+    </style>
+    <p>Recomended Food/Drinks in Resturants</p>
+    <table>
+        <tr>
+            <th>Food/Drinks</th>
+            <th>Location</th>
+            <th>Price</th>
+        </tr>
 
-<style>
-    table,
-    th,
-    td {
-        border: 1px solid black;
-    }
-</style>
-<p>Recomended Food/Drinks in Resturants</p>
-<table>
-    <tr>
-        <th>Food/Drinks</th>
-        <th>Location</th>
-        <th>Price</th>
-    </tr>
+        <tr>
+            <td>Fanta</td>
+            <td>Burger king</td>
+            <td>$1</td>
+        </tr>
 
-    <tr>
-        <td>Fanta</td>
-        <td>Burger king</td>
-        <td>$1</td>
-    </tr>
+        <tr>
+            <td>Chicken Nuggets</td>
+            <td>Nugget Point</td>
+            <td>$1.5</td>
+        </tr>
 
-    <tr>
-        <td>Chicken Nuggets</td>
-        <td>Nugget Point</td>
-        <td>$1.5</td>
-    </tr>
+        <tr>
+            <td>French Fries</td>
+            <td>Tacobell</td>
+            <td>$2</td>
+        </tr>
 
-    <tr>
-        <td>French Fries</td>
-        <td>Tacobell</td>
-        <td>$2</td>
-    </tr>
+        <tr>
+            <td>Pizza</td>
+            <td>Pizza Hut</td>
+            <td>$5</td>
+        </tr>
+    </table>
 
-    <tr>
-        <td>Pizza</td>
-        <td>Pizza Hut</td>
-        <td>$5</td>
-    </tr>
-</table>
+    <hr>
 
-<hr>
+    <h3>Fibonacci Numbers</h3>
+    <blockquote cite="https://en.wikipedia.org/wiki/Fibonacci_number">
+        Fibonacci numbers are named after the Italian mathematician Leonardo of Pisa, later known as Fibonacci. In his
+        1202
+        book Liber Abaci, Fibonacci introduced the sequence to Western European mathematics, although the sequence had
+        been described earlier in Indian mathematics, as early as 200 BC in work by Pingala on enumerating possible
+        patterns of Sanskrit poetry formed from syllables of two lengths.
+    </blockquote>
 
-<h3>Fibonacci Numbers</h3>
-<blockquote cite="https://en.wikipedia.org/wiki/Fibonacci_number">
-    Fibonacci numbers are named after the Italian mathematician Leonardo of Pisa, later known as Fibonacci. In his 1202
-    book Liber Abaci, Fibonacci introduced the sequence to Western European mathematics, although the sequence had
-    been described earlier in Indian mathematics, as early as 200 BC in work by Pingala on enumerating possible
-    patterns of Sanskrit poetry formed from syllables of two lengths.
-</blockquote>
+    <a href="https://en.wikipedia.org/wiki/Fibonacci_number">Link for Description</a>
 
-<a href="https://en.wikipedia.org/wiki/Fibonacci_number">Link for Description</a>
-
-<pre>
+    <pre>
     pair<int, int> fib (int n) {
         if (n == 0)
             return {0, 1};
@@ -111,4 +109,6 @@
             return {c, d};
     }
 </pre>
+</body>
 
+</html>
