--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </ul>
 
     <a
-        href="C:/Users/s545622/Git_Demo/webapps-repos/webapps-f21-assignment-3-chaitanyaswaroopdev/aboutme.html">aboutme</a>
+        href="aboutme.html">aboutme</a>
 
     <hr>
 
