--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <li>Money</li>
     </ul>
 
-    <a href="aboutme.html">***aboutme***</a>
+    <a href="aboutme.html">aboutme</a>
 
     <hr>
 
