--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <a href="bonus.html">link for the bonus</a>
+    <a href="bonus.html">BONUS</a>
     <h1>Chaitanya Swaroop Udata</h1>
     <h2>Vishakapatnam</h2>
     <p>Visakhapatnam is a port city and <b>industrial center</b> in the Indian state of <b>Andhra Pradesh</b>, on the
