--- a/aboutme.html
+++ b/aboutme.html
@@ -11,7 +11,7 @@
             created by writer Jerry Siegel and artist Joe Shuster, and debuted in the comic book Action Comics #1
             (cover-dated June 1938 and published April 18, 1938).Superman has been adapted to a number of other media
             which includes radio serials, novels, movies, television shows and theatre.</p>
-        <img src="Superman.jpg" alt="Man of Steel" width="50" height="50"> 
+        <img src="Superman.jpg" alt="Man of Steel" width="100" height="100"><br> 
         <a href="index.html">Back to index</a>
     </body>
     
