--- a/bonus.html
+++ b/bonus.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Bonus page</title>
-    </head>
-    <body>
-        <a href="index.html">Back to the index</a>
-    </body>
+
+<head>
+    <title>Bonus page</title>
+</head>
+
+<body>
+    <p>
+        Alexander Joseph Luthor is a fictional supervillain appearing in American comic books published by DC Comics.
+        The character was created by Jerry Siegel and Joe Shuster. Lex Luthor originally appeared in Action Comics No.
+        23 (cover dated: April 1940). He has since endured as the archenemy of Superman.
+    </p>
+    <p>
+        Lex Luthor was originally depicted as a narcissistic and egotistical mad scientist, but since the late 1980s, he
+        has more often been portrayed as a power-mad business magnate, the CEO of LexCorp. He wishes to rid the world of
+        Superman, ostensibly because he views Superman as a threat to humanity, but in reality envies Superman's
+        popularity and influence.
+    </p>
+    <img src="lex luthor.jpg" alt="🦹" width="700" height="500"><br>
+    <a href="index.html">Back to the index</a>
+</body>
+
 </html>
