--- a/bonus.html
+++ b/bonus.html
@@ -16,7 +16,15 @@
         has more often been portrayed as a power-mad business magnate, the CEO of LexCorp. He wishes to rid the world of
         Superman, ostensibly because he views Superman as a threat to humanity, but in reality envies Superman's
         popularity and influence.
-    </p>
+    </p> Genius-level intellect Criminal mastermind Proficient engineer with exceptional technological prowess Via
+         high-tech warsuit: Superhuman strength, speed and durability Energy projection Force fields Flight Advanced weaponry
+         (often incorporating kryptonite) Wields kryptonite ring
+    <h3>Superpowers</h3>
+    <ul>
+        <li>
+
+        </li>
+    </ul>
     <img src="lex luthor.jpg" alt="🦹" width="700" height="500"><br>
     <a href="index.html">Back to the index</a>
 </body>
