--- a/bonus.html
+++ b/bonus.html
@@ -19,11 +19,9 @@
     </p> 
     <h3>Superpowers</h3>
     <ul>
-        <li>
-            Genius-level intellect Criminal mastermind Proficient engineer with exceptional technological prowess Via
+        <li>Genius-level intellect Criminal mastermind Proficient engineer with exceptional technological prowess Via
             high-tech warsuit: Superhuman strength, speed and durability Energy projection Force fields Flight Advanced weaponry
-            (often incorporating kryptonite) Wields kryptonite ring.
-        </li>
+            (often incorporating kryptonite) Wields kryptonite ring.</li>
     </ul>
     <img src="lex luthor.jpg" alt="🦹" width="700" height="500"><br>
     <a href="index.html">Back to the index</a>
