--- a/bonus.html
+++ b/bonus.html
@@ -26,6 +26,15 @@
     </ul>
     <img src="lex luthor.jpg" alt="🦹" width="700" height="500"><br>
     <a href="index.html">Back to the index</a>
+    <h3>
+        Directions to the lair of your nemesis.
+    </h3>
+    <ul>
+        <li>From Maryville Take a flight to North Carolina</li>
+        <li>In between you may cross over some of the major cities like St.Louis, Nashville etc</li>
+        <li>When you departure at the North Carolina take a taxi to Smallville</li>
+        <li>Reaching Smallville you can find a big castle name "Hatley Castle" where supervillain Lex Luthor lives</li>
+    </ul>
 </body>
 
 </html>
