--- a/bonus.html
+++ b/bonus.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <h1>Lex Luthor</h1>
+    <h1>The Red Lex Luthor</h1>
     <p>
         Alexander Joseph Luthor is a fictional supervillain appearing in American comic books published by DC Comics.
         The character was created by Jerry Siegel and Joe Shuster. Lex Luthor originally appeared in Action Comics No.
