--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             return {c, d};
     }
 </pre>
-
+    <a href="https://cp-algorithms.com/algebra/fibonacci-numbers.html">Link for code</a>
 
 </body>
 
